# make_event

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_user_is_active.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
make_event/: asgi.py  settings.py  urls.py  wsgi.py
organizations/: admin.py  models.py  serializers.py  urls.py  views.py
organizations/migrations/: 0001_initial.py
